--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -26,6 +26,8 @@
 				<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
+		{% include header.html %}
+
 		{{ content }}
 
 		{% include scripts.html %}
