Updated header include. Updated Playbook assets.

--- a/app/assets/_scss/base/_library.scss
+++ b/app/assets/_scss/base/_library.scss
@@ -1,123 +1,1 @@
-/* LIBRARY
- * -----------------------------------------------------------------------------
- * Styling for custom elements used throughout the site.
- * -----------------------------------------------------------------------------*/
-
-/*
- * TABLE OF CONTENTS
- * ---------------------------------------------------------------------------
- * 1. Utilities
- * 2. Buttons
- * 3. Forms
- * 4. Lists
- * 5. Navigation
- * 6. Tables
- * 7. Other/Misc
- * ---------------------------------------------------------------------------
- */
-
-/**** Utilities ****/
-.clearfix:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
-.clearfix { display: block; }
-.selfclear { clear: both; }
-.pull-left { float: left; }
-.pull-right { float: right; }
-.text-left { text-align: left; }
-.text-center { text-align: center; }
-.text-right { text-align: right; }
-.valign-top { vertical-align: top; }
-.valign-middle { vertical-align: middle; }
-.valign-bottom { vertical-align: bottom; }
-.relative { position: relative; }
-.no-margin { margin: 0; }
-.no-padding { padding: 0; }
-
-
-
-/**** Buttons ****/
-
-
-
-/**** Forms ****/
-
-
-
-/**** Lists ****/
-.list-horizontal {
-  margin: 0;
-
-  > li {
-    display: inline-block;
-  }
-}
-
-.list-unstyled {
-  margin: 0;
-  padding: 0;
-
-  > li {
-    list-style: none;
-  }
-}
-
-.list-bars {
-  @extend .list-unstyled;
-  border-bottom: 1px solid $gray-lighter;
-  margin-bottom: 2em;
-
-  > li {
-    display: block;
-    border-top: 1px solid $gray-lighter;
-
-    > a {
-      display: block;
-      padding: 0.5em 1.65em 0.5em 0.5em;
-      position: relative;
-
-      &:after {
-        content: ' \203A';
-        font-size: 1.25em;
-        line-height: 1;
-        margin-top: -0.6em;
-        position: absolute;
-        right: 0.5em;
-        top: 50%;
-      }
-    }
-  }
-}
-
-
-/**** Navigation ****/
-
-
-
-/**** Tables ****/
-
-
-
-
-/**** Typography ****/
-.mark {
-  border: 1px solid $green;
-  border-radius: 50%;
-  color: $green;
-  display: block;
-  font-family: $sans-serif-font-family;
-  font-size: 1.65em;
-  font-weight: 200;
-  height: 2.43em;
-  line-height: 1.0;
-  margin: 0.75em auto;
-  padding: 0.7em 0;
-  text-align: center;
-  width: 2.43em;
-
-  &:visited {
-    color: $green;
-  }
-}
-
-
-
-/**** Other/Misc ****/
+/**** Library ****/
