--- a/app/assets/_scss/screen.scss
+++ b/app/assets/_scss/screen.scss
@@ -9,7 +9,20 @@
 @import "bourbon/app/assets/stylesheets/bourbon";
 @import "base/variables";
 @import "neat/app/assets/stylesheets/neat";
+@import "base/utilities";
 
-// Global Styles
+// Base
+@import "base/fonts";
+@import "base/typography";
+@import "base/buttons";
+@import "base/forms";
+@import "base/lists";
+@import "base/tables";
 @import "base/library";
 @import "base/application";
+
+// Modules
+// @import "modules/modal";
+
+// Pages
+// @import "pages/home";
