--- a/app/assets/_scss/base/_variables.scss
+++ b/app/assets/_scss/base/_variables.scss
@@ -1,25 +1,23 @@
 /**** Variables ****/
 @import "neat/app/assets/stylesheets/neat-helpers";
 
-//**** Globals ***
+//**** Globals ****
 $base-value: 16;
 $base-value-tablet: 22;
 
 
 
-//**** Neat Grid ****
-// Uncomment these if you need additional configuration
-$max-width: em(1088, $base-value); // Max-width of the outer container
-// $default-feature: min-width;    // Default @media feature for the breakpoint() mixin
-// $column: golden-ratio(1em, 3);  // Column width
-// $gutter: golden-ratio(1em, 1);  // Gutter between each two columns
-// $grid-columns: 12;              // Total number of columns in the grid
-// $border-box-sizing: true;       // Makes all elements have a border-box layout
+//**** Typography ****
+$base-font-size:         #{$base-value + "px"};
+$base-font-size-tablet:  #{$base-value-tablet + "px"};
+$base-line-height:       1.5;
 
-// $visual-grid: true;
-// $visual-grid-color: red;
-// $visual-grid-index: front;
-// $visual-grid-opacity: 0.05;
+// Available Typekit font styles:
+// Skolar: Regular 400 | Regular Italic 400 | Semi-Bold 600 | Bold 700 | Bold Italic 700
+$serif-font-family:      'skolar', Georgia, Times, serif;
+$sans-serif-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$base-font-family:       $serif-font-family;
+$header-font-family:     $base-font-family;
 
 
 
@@ -31,17 +29,18 @@ $mobile-only: max-width 699px; // Avoid using this
 
 
 
-//**** Typography ****
-// Available Typekit font styles:
-// Skolar: Regular 400 | Regular Italic 400 | Semi-Bold 600 | Bold 700 | Bold Italic 700
-$serif-font-family:      'skolar', Georgia, Times, serif;
-$sans-serif-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+//**** Neat Grid ****
+$max-width: em(1088, $base-value); // Max-width of the outer container
+// $default-feature: min-width;    // Default @media feature for the breakpoint() mixin
+// $column: golden-ratio(1em, 3);  // Column width
+// $gutter: golden-ratio(1em, 1);  // Gutter between each two columns
+// $grid-columns: 12;              // Total number of columns in the grid
+// $border-box-sizing: true;       // Makes all elements have a border-box layout
 
-$base-font-family:          $serif-font-family;
-$header-font-family:        $base-font-family;
-$base-font-size:            #{$base-value + 'px'};
-$base-font-size-tablet:     #{$base-value-tablet + 'px'};
-$base-line-height:          1.5;
+// $visual-grid: true;
+// $visual-grid-color: red;
+// $visual-grid-index: front;
+// $visual-grid-opacity: 0.05;
 
 
 
@@ -64,3 +63,16 @@ $yellow:                #fe9800;
 $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
+
+
+
+//**** Selectors ****
+$anchors-list: 'a',
+               'a:visited',
+               'a:hover',
+               'a:active';
+$anchors: ();
+
+@each $anchor in $anchors-list {
+  $anchors: append($anchors, unquote($anchor), comma);
+}
