More work on the blog.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -33,5 +33,8 @@
 		{% include scripts.html %}
 		{% include googleanalytics.html %}
 
+		{% if page.layout == 'post' %}
+			{% include disqus_init.html %}
+		{% endif %}
 	</body>
 </html>
