--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -1,4 +1,3 @@
-<!-- build:js(app) /assets/js/script.js -->
+<!-- build:js(app) /assets/js/app.js -->
 <script src="/_bower_components/modernizr/modernizr.js"></script>
-<script src="/assets/js/main.js"></script>
 <!-- endbuild -->
