--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -2,5 +2,8 @@
 layout: default
 ---
 <article class="post">
+  <h1>{{ page.title }}</h1>
   {{ content }}
 </article>
+
+{% include disqus_thread.html %}
