--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -3,6 +3,11 @@ layout: default
 ---
 <article class="post">
   <h1>{{ page.title }}</h1>
+
+  <div class="post-meta">
+    {{ page.date | date: "%B %-d, %Y" }} &bull; {{ page.content | reading_time }}
+  </div>
+
   {{ content }}
 </article>
 
