--- a/app/assets/_scss/base/_library.scss
+++ b/app/assets/_scss/base/_library.scss
@@ -1,15 +1,34 @@
-/**** Library ****/
 .me {
   background-image: url('../img/david.jpg');
   background-position: 50% 50%;
   background-size: cover;
   min-height: 300px;
 
-  @include media($tablet) {
+  @include media($medium) {
     min-height: 360px;
   }
 }
 
 .last {
   margin-bottom: 2em;
+}
+
+.mark {
+  border: 1px solid $green;
+  border-radius: 50%;
+  color: $green;
+  display: block;
+  font-family: $sans-serif;
+  font-size: 1.65em;
+  font-weight: 200;
+  height: 2.43em;
+  line-height: 1.0;
+  margin: 0.75em auto;
+  padding: 0.7em 0;
+  text-align: center;
+  width: 2.43em;
+
+  &:visited {
+    color: $green;
+  }
 }
