--- a/app/assets/_scss/base/_lists.scss
+++ b/app/assets/_scss/base/_lists.scss
@@ -1,54 +1,37 @@
-/**** Lists ****/
+ul, ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  &%default-ul {
+    list-style-type: disc;
+    margin-bottom: $base-line-height / 2;
+    padding-left: $base-line-height;
+  }
+
+  &%default-ol {
+    list-style-type: decimal;
+    margin-bottom: $base-line-height / 2;
+    padding-left: $base-line-height;
+  }
+}
+
 dl {
-  margin-bottom: $base-line-height;
-}
-
-dt,
-dd {
   line-height: $base-line-height;
-}
+  margin-bottom: $base-line-height / 2;
 
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-left: $base-line-height / 2;
-}
-
-.dl-horizontal {
   dt {
-    clear: left;
-    float: left;
-    text-align: right;
-    width: 120px;
-    @include text-overflow();
+    font-weight: bold;
+    margin-top: $base-line-height / 2;
   }
 
   dd {
-    margin-left: 130px;
+    margin: 0;
   }
 }
 
-%list-horizontal {
-  margin: 0;
-
-  > li {
-    display: inline-block;
-  }
-}
-
-%list-unstyled {
-  margin: 0;
-  padding: 0;
-
-  > li {
-    list-style: none;
-  }
-}
 
 .list-bars {
-  @extend %list-unstyled;
   border-bottom: 1px solid $gray-lighter;
   margin-bottom: 2em;
 
