--- a/app/assets/_scss/base/_utilities.scss
+++ b/app/assets/_scss/base/_utilities.scss
@@ -1,4 +1,3 @@
-/**** Utilities ****/
 .clearfix:after {
   clear: both; content: "."; display: block; height: 0; visibility: hidden;
 }
@@ -56,7 +55,7 @@
 }
 
 .mobile-hide {
-  @include media($mobile-only) {
+  @include media($small-only) {
     display: none;
   }
 }
