--- a/app/assets/_scss/base/_typography.scss
+++ b/app/assets/_scss/base/_typography.scss
@@ -2,14 +2,18 @@ body {
   color: $base-font-color;
   font-family: $base-font-family;
   font-size: $base-font-size;
-  -webkit-font-smoothing: antialiased;
   line-height: $base-line-height;
+  -webkit-font-smoothing: antialiased;
+
+  @include media($medium) {
+    font-size: em(22);
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $header-font-family;
   line-height: 1.25em;
-  margin: 0;
+  margin: 0 0 0.75em 0;
   text-rendering: optimizeLegibility; // Fix the character spacing for headings
 }
 
@@ -19,26 +23,36 @@ h1 {
   margin-bottom: 0.15em;
 
   @include media($medium) {
-    font-size: $base-font-size * 2.5625; // 16 * 2.5625 = 41px
+    font-size: $base-font-size * 1.863; // 22 * 1.863 = 41px
   }
 }
 
 h2 {
-  font-size: $base-font-size * 2; // 16 * 2 = 32px
+  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+
+  @include media($medium) {
+    font-size: $base-font-size * 1.4545; // 22 * 1.4545 = 32px
+  }
 }
 
 h3 {
-  font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
+  font-size: $base-font-size * 1.1875; // 16 * 1.1875 = 19px
+
+  @include media($medium) {
+    font-size: $base-font-size * 1.1818; // 22 * 1.1818 = 26px
+  }
 }
 
 h4 {
-  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+  font-size: $base-font-size * 1.875; // 16 * 1.875 = 19px
+  text-transform: uppercase;
+
+  @include media($medium) {
+    font-size: $base-font-size * 1.1818; // 22 * 1.1818 = 26px
+  }
 }
 
-h5 {
-  font-size: $base-font-size * 1.25; // 16 * 1.25 = 20px
-}
-
+h5,
 h6 {
   font-size: $base-font-size;
 }
@@ -126,7 +140,7 @@ small {
 pre {
   background: $gray-lighter;
   overflow: auto;
-  padding: em(10);
+  padding: em(10, 22);
 
   code {
     padding: 0;
@@ -135,7 +149,7 @@ pre {
 
 code {
   background: $gray-lighter;
-  font-size: em(18);
+  font-size: em(18, 22);
   padding: em(3, 18) em(7, 18);
 }
 
