--- a/app/assets/_scss/base/_variables.scss
+++ b/app/assets/_scss/base/_variables.scss
@@ -51,3 +51,6 @@ $base-border-color: $gray-light;
 $error-color: $red-light;
 $notice-color: $yellow-light;
 $success-color: $green-light;
+
+// Transition Duration
+$transition-duration: 0.2s;
