--- a/app/assets/_scss/base/_typography.scss
+++ b/app/assets/_scss/base/_typography.scss
@@ -73,7 +73,15 @@ a {
 
   &:active, &:focus {
     color: $hover-link-color;
-    outline: none;
+  }
+}
+
+del a {
+  &,
+  &:hover,
+  &:active,
+  &:focus {
+    color: lighten($base-font-color, 15%);
   }
 }
 
