Replace Skolar Web with Alegreya

--- a/app/assets/_scss/base/_variables.scss
+++ b/app/assets/_scss/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 ///////////////////////////////////////////////////////////////////////////////
 $sans-serif: $helvetica;
-$serif: 'skolar', $georgia;
+$serif: 'Alegreya', $georgia;
 
 $base-font-family: $serif;
 $header-font-family: $base-font-family;
