--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -18,8 +18,7 @@
 		<link rel="stylesheet" href="/assets/css/screen.css">
 		<!-- endbuild -->
 
-		<script type="text/javascript" src="//use.typekit.net/efm1mqc.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<link href='http://fonts.googleapis.com/css?family=Alegreya:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<!--[if lt IE 7]>
