Add HMR of styles, break React server/client rendering

--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,8 @@
 :root {
   --font-family: 'Avenir Next', 'Hevletica Neue', sans-serif;
 }
+
+body {
+  /*background: red;*/
+  /*background: blue;*/
+}
