--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,18 @@
+@import 'normalize.css';
+@import 'basscss-background-colors';
+@import 'basscss-btn';
 @import 'basscss';
 
 :root {
   --font-family: -apple-system, Roboto, 'Helvetica Neue', Helvetica, sans-serif;
+  --font-size: 1.125rem;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
   font-family: var(--font-family);
+  font-size: var(--font-size);
 }
