--- a/src/app.css
+++ b/src/app.css
@@ -9,9 +9,11 @@
 body {
   font-family: var(--font-family);
   font-size: var(--font-size);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 :root {
-  --font-family: -apple-system, Roboto, 'Helvetica Neue', Helvetica, sans-serif;
+  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   --font-size: 1.125rem;
 }
