--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,19 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+p a {
+  box-shadow: inset 0 -2px 0 #ccc;
+}
+
+p a:hover {
+  box-shadow: inset 0 -2px 0 #8aba56;
+}
+
 :root {
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   --font-size: 1.125rem;
