--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,16 @@ p a:hover {
   box-shadow: inset 0 -2px 0 #8aba56;
 }
 
+.h0 { font-size: 1.25rem; }
+
+@media (min-width: 32rem) {
+  .h0 { font-size: 1.5rem; }
+}
+
+@media (min-width: 48rem) {
+  .h0 { font-size: 2rem; }
+}
+
 :root {
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   --font-size: 1.125rem;
