--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,11 @@ p a:hover {
   box-shadow: inset 0 -2px 0 #8aba56;
 }
 
+p,
+pre {
+  margin-bottom: 2rem;
+}
+
 .h0 { font-size: 1.25rem; }
 
 @media (min-width: 32rem) {
@@ -36,7 +41,27 @@ p a:hover {
   .h0 { font-size: 2rem; }
 }
 
+pre {
+  background: #fff;
+  border: 1px solid var(--gray-lighter);
+  overflow: auto;
+  padding: 1rem;
+}
+
+pre code {
+  border: none;
+  padding: 0;
+}
+
+code {
+  background: #fff;
+  border: 1px solid var(--gray-lighter);
+  font-size: 1rem;
+  padding: .1875rem .4375rem;
+}
+
 :root {
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   --font-size: 1.125rem;
+  --gray-lighter: #eee;
 }
