--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -2,6 +2,17 @@
   font-family: 'Athelas', Georgia, serif;
 }
 
+.Post-header {
+  text-align: center;
+}
+
+.Post-date {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  color: #ccc;
+  padding: 0.5rem 0;
+}
+
 .Post-title {
   font-size: 1.625rem;
 }
