Clean up styles and copy

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -19,18 +19,17 @@ a {
   text-decoration: none;
 }
 
-.btn-link {
-  display: inline-block;
-}
-
 p a,
 .btn-link {
-  box-shadow: inset 0 -2px 0 #ccc;
+  background-image: linear-gradient(transparent, transparent 4px, #ccc 4px, #ccc);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: 100% 6px;
 }
 
 p a:hover,
 .btn-link:hover {
-  box-shadow: inset 0 -2px 0 #8aba56;
+  background-image: linear-gradient(transparent, transparent 4px, #8aba56 4px, #8aba56);
 }
 
 p,
@@ -64,6 +63,7 @@ code {
 
 .h0 {
   font-size: 1.25rem;
+  line-height: 1.35;
 }
 
 @media (min-width: 32rem) {
