--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -1,5 +1,5 @@
 .Post {
-  font-family: 'Athelas', Georgia, serif;
+  font-family: 'cardo', Georgia, serif;
 }
 
 .Post-header {
@@ -7,9 +7,9 @@
 }
 
 .Post-date {
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  color: #ccc;
+  border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+  color: #aaa;
   padding: 0.5rem 0;
 }
 
