--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  color: var(--black);
+  color: var(--gray);
   font-family: var(--font-family);
   font-size: var(--font-size);
   text-rendering: optimizeLegibility;
@@ -29,7 +29,7 @@ p a,
 
 p a:hover,
 .btn-link:hover {
-  background-image: linear-gradient(to bottom, rgba(138, 186, 86, 0) 25%, rgba(138, 186, 86, .6) 50%);
+  background-image: linear-gradient(to bottom, rgba(138, 186, 86, 0) 50%, rgba(138, 186, 86, .6) 50%);
 }
 
 p,
@@ -56,31 +56,32 @@ code {
   padding: .1875rem .4375rem;
 }
 
-.cardo {
-  font-family: 'Cardo', Georgia, serif;
+.alegreya {
+  font-family: 'Alegreya', Georgia, serif;
   line-height: 1.25;
 }
 
 .h0 {
-  font-size: 1.25rem;
-  line-height: 1.35;
+  font-size: 1.5rem;
+  line-height: 1.25;
 }
 
 @media (min-width: 32rem) {
-  .h0 { font-size: 2.6rem; }
+  .h0 { font-size: 2.75rem; }
 }
 
 @media (min-width: 48rem) {
-  .h0 { font-size: 3.25rem; }
+  .h0 { font-size: 3.75rem; }
 }
-
+/*
 @media(max-width: 32rem) {
   .sm-hide { display: none; }
-}
+}*/
 
 :root {
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   --font-size: 1.125rem;
+  --gray: #555;
   --gray-lighter: #eee;
   --black: #111111;
 }
