--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -1,29 +1,31 @@
 .Post {
-  font-family: 'cardo', Georgia, serif;
-}
-
-.Post-header {
-  text-align: center;
-}
-
-.Post-date {
-  border-top: 1px solid #aaa;
-  border-bottom: 1px solid #aaa;
-  color: #aaa;
-  padding: 0.5rem 0;
+  font-family: 'alegreya', Georgia, serif;
 }
 
 .Post-title {
-  font-size: 1.625rem;
+  font-size: 1.5625rem;
+  font-weight: normal;
+  margin-top: 1rem;
+  margin-bottom: .5rem;
+}
+
+.Post-date {
+  color: #999;
+  display: inline-block;
+  margin-bottom: .5rem;
 }
 
 .Post-body {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
+}
+
+.Post-body p:first-child {
+  margin-top: 0;
 }
 
 @media (min-width: 48rem) {
   .Post-title {
-    font-size: 2.25rem;
+    font-size: 2.625rem;
   }
 
   .Post-body {
