--- a/components/BlogPost/index.css
+++ b/components/BlogPost/index.css
@@ -6,7 +6,7 @@ p code {
   background: #282c34;
   border: 1px solid rgba(255, 255, 255, 0.05);
   color: #abb2bf;
-  padding: 0.25em;
+  padding: 0 0.25em;
 }
 
 /*
