--- a/components/BlogPost/light.css
+++ b/components/BlogPost/light.css
@@ -3,8 +3,8 @@ pre.lowlight {
 }
 
 p code {
-  background: #282c34;
-  color: #abb2bf;
+  background: #fafafa;
+  color: #383a42;
   padding: 0.1em 0.25em;
 }
 
