--- a/components/Layout/index.css
+++ b/components/Layout/index.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+.Layout {
+  background-color: var(--backgroundBorder);
+  color: var(--color);
   font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.Layout-content {
+  background-color: var(--background);
 }
