--- a/components/Layout/index.css
+++ b/components/Layout/index.css
@@ -15,6 +15,8 @@
 
 .SkipToContent {
   @apply sr-only;
+  font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .SkipToContent:focus {
