Change TextButton styles
Remove hover styles, add active styles.

--- a/components/TextButton.css
+++ b/components/TextButton.css
@@ -2,13 +2,14 @@
   border-bottom: 2px solid var(--linkBorder);
   box-shadow: inset 0 -0.3rem 0 var(--linkShadow);
   color: var(--color);
+  display: inline-block;
   font-size: inherit;
   text-decoration: none;
-  transition-duration: 160ms;
-  transition-property: box-shadow;
+  transition-duration: 100ms;
+  transition-property: transform;
   transition-timing-function: ease;
 }
 
-.TextButton:hover {
-  box-shadow: inset 0 -1.3em 0 var(--linkShadow);
+.TextButton:active {
+  transform: scale(0.97);
 }
