--- a/styles.css
+++ b/styles.css
@@ -14,20 +14,17 @@
 }
 
 .SkipToContent {
-  @apply sr-only;
   font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .SkipToContent:focus {
-  @apply not-sr-only;
-  @apply bg-white;
-  @apply border-solid;
-  @apply rounded-lg;
-  @apply p-4;
-  @apply mt-2;
-  @apply ml-2;
   background-color: var(--color);
   color: var(--background);
-  position: absolute;
+}
+
+.TextButton {
+  border-bottom: 2px solid var(--linkBorder);
+  box-shadow: inset 0 -0.3rem 0 var(--linkShadow);
+  color: var(--color);
 }
