--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.content {
+  max-width: 28rem;
+}
+
+@screen sm {
+  .content {
+    max-width: 50rem;
+  }
+}
+
+@screen md {
+  .content {
+    max-width: 50rem;
+  }
+}
+
+@screen lg {
+  .content {
+    max-width: 60rem;
+  }
+}
