--- a/styles.css
+++ b/styles.css
@@ -2,29 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-.Layout {
-  background-color: var(--backgroundBorder);
-  color: var(--color);
-  font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Helvetica, sans-serif;
+.content {
+  max-width: 28rem;
 }
 
-.Layout-content {
-  background-color: var(--background);
+@screen sm {
+  .content {
+    max-width: 50rem;
+  }
 }
 
-.SkipToContent {
-  font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Helvetica, sans-serif;
+@screen md {
+  .content {
+    max-width: 50rem;
+  }
 }
 
-.SkipToContent:focus {
-  background-color: var(--color);
-  color: var(--background);
-}
-
-.TextButton {
-  border-bottom: 2px solid var(--linkBorder);
-  box-shadow: inset 0 -0.3rem 0 var(--linkShadow);
-  color: var(--color);
+@screen lg {
+  .content {
+    max-width: 60rem;
+  }
 }
