--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"header"} /-->
+
 <!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
 <div class="wp-block-query">
   <!-- wp:post-template -->
