feat: Add title to page template

--- a/templates/page.html
+++ b/templates/page.html
@@ -2,5 +2,6 @@
 
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
+  <!-- wp:post-title /-->
   <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
