--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
 <div class="wp-block-query">
   <!-- wp:post-template -->
-  <!-- wp:post-title /-->
+  <!-- wp:post-title {"isLink":true} /-->
 
   <!-- wp:post-date /-->
   <!-- /wp:post-template -->
