--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,29 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
-<div class="wp-block-query">
-  <!-- wp:post-template -->
-  <!-- wp:post-title {"isLink":true} /-->
+<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
+<main class="wp-block-group">
+  <!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
+  <div class="wp-block-query">
+    <!-- wp:post-template -->
+    <!-- wp:post-title {"isLink":true} /-->
 
-  <!-- wp:post-date /-->
-  <!-- /wp:post-template -->
+    <!-- wp:post-date /-->
+    <!-- /wp:post-template -->
 
-  <!-- wp:query-pagination -->
-  <!-- wp:query-pagination-previous /-->
+    <!-- wp:query-pagination -->
+    <!-- wp:query-pagination-previous /-->
 
-  <!-- wp:query-pagination-numbers /-->
+    <!-- wp:query-pagination-numbers /-->
 
-  <!-- wp:query-pagination-next /-->
-  <!-- /wp:query-pagination -->
+    <!-- wp:query-pagination-next /-->
+    <!-- /wp:query-pagination -->
 
-  <!-- wp:query-no-results -->
-  <!-- wp:paragraph {"placeholder":"Add text or blocks that will display when the query returns no results."} -->
-  <p></p>
-  <!-- /wp:paragraph -->
-  <!-- /wp:query-no-results -->
-</div>
-<!-- /wp:query -->
+    <!-- wp:query-no-results -->
+    <!-- wp:paragraph {"placeholder":"Add text or blocks that will display when the query returns no results."} -->
+    <p></p>
+    <!-- /wp:paragraph -->
+    <!-- /wp:query-no-results -->
+  </div>
+  <!-- /wp:query -->
+</main>
+<!-- /wp:group -->
