--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,12 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:group {"tagName":"main"} -->
+<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
 <main class="wp-block-group">
-  <!-- wp:post-title /-->
+  <!-- wp:group {"layout":{"inherit":true}} -->
+  <div class="wp-block-group">
+    <!-- wp:post-title {"level":"1"} /-->
+  </div>
+  <!-- /wp:group -->
   <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
 <!-- /wp:group -->
