--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .navigation-primary {
   bottom: 0.5rem;
   left: 0;
