--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,10 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:group {"className":"fixed z-10 bottom-2 lg:bottom-auto lg:top-10 left-0 lg:left-1/2 lg:translate-x-[calc(-65ch/2-128px)] flex w-full lg:w-auto"} -->
+<div
+  class="wp-block-group fixed z-10 bottom-2 lg:bottom-auto lg:top-10 left-0 lg:left-1/2 lg:translate-x-[calc(-65ch/2-128px)] flex w-full lg:w-auto"
+>
+  <!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
+</div>
+<!-- /wp:group -->
 
 <!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
 <main class="wp-block-group">
