--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,14 @@
 
 <!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
 <main class="wp-block-group">
+  <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+  <div class="wp-block-group">
+    <!-- wp:heading {"level":1} -->
+    <h1 class="wp-block-heading">Blog</h1>
+    <!-- /wp:heading -->
+  </div>
+  <!-- /wp:group -->
+
   <!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
   <div class="wp-block-query">
     <!-- wp:post-template -->
