--- a/templates/page-no-title.html
+++ b/templates/page-no-title.html
@@ -1,12 +1,8 @@
-<!-- wp:group {"className":"fixed z-10 bottom-2 lg:bottom-auto lg:top-10 left-0 lg:left-1/2 lg:translate-x-[calc(-44ch/2-128px)] flex w-full lg:w-auto"} -->
-<div
-  class="wp-block-group fixed z-10 bottom-2 lg:bottom-auto lg:top-10 left-0 lg:left-1/2 lg:translate-x-[calc(-44ch/2-128px)] flex w-full lg:w-auto"
->
-  <!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
-</div>
+<!-- wp:group -->
+<div class="wp-block-group"><!-- wp:template-part {"slug":"header"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
+<!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
 <main class="wp-block-group">
   <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
