refactor: Format files

--- a/templates/page.html
+++ b/templates/page.html
@@ -5,10 +5,9 @@
 <!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
 <main class="wp-block-group">
   <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
-  <div class="wp-block-group">
-    <!-- wp:post-title {"level":"1"} /-->
-  </div>
+  <div class="wp-block-group"><!-- wp:post-title /--></div>
   <!-- /wp:group -->
+
   <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
 <!-- /wp:group -->
