feat: Explore typography changes

--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
 <!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
 <main class="wp-block-group">
   <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
-  <div class="wp-block-group"><!-- wp:post-title /--></div>
+  <div class="wp-block-group"><!-- wp:post-title {"level":1} /--></div>
   <!-- /wp:group -->
 
   <!-- wp:post-content {"layout":{"inherit":true}} /-->
