--- a/style.css
+++ b/style.css
@@ -16,13 +16,8 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* @TODO: Configure with theme.json when possible */
-.wp-block-image.is-style-circle-mask img,
-.wp-block-image.is-style-rounded img,
-.wp-block-image .is-style-rounded img {
-  @apply rounded-lg;
+@media (max-width: 599px) {
+  .wp-block-search {
+    display: none;
+  }
 }
