--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,44 @@
-<!-- wp:group -->
-<div class="wp-block-group"><!-- wp:template-part {"slug":"header"} /--></div>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group">
-  <!-- wp:query {"queryId":51,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
-  <div class="wp-block-query">
+  <!-- wp:query {"queryId":51,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"displayLayout":{"type":"list","columns":3},"align":"wide","layout":{"type":"default"}} -->
+  <div class="wp-block-query alignwide">
     <!-- wp:post-template -->
-    <!-- wp:post-title {"isLink":true} /-->
+    <!-- wp:columns -->
+    <div class="wp-block-columns">
+      <!-- wp:column {"width":"100%"} -->
+      <div class="wp-block-column" style="flex-basis: 100%">
+        <!-- wp:post-title {"level":1,"isLink":true} /-->
+      </div>
+      <!-- /wp:column -->
 
-    <!-- wp:post-date /-->
+      <!-- wp:column {"verticalAlignment":"center","width":"10rem","layout":{"type":"default"}} -->
+      <div
+        class="wp-block-column is-vertically-aligned-center"
+        style="flex-basis: 10rem"
+      >
+        <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left"}} -->
+        <div class="wp-block-group">
+          <!-- wp:post-date {"format":"j F Y","isLink":true,"fontSize":"base"} /-->
+
+          <!-- wp:post-terms {"term":"category","fontSize":"base"} /-->
+        </div>
+        <!-- /wp:group -->
+      </div>
+      <!-- /wp:column -->
+    </div>
+    <!-- /wp:columns -->
+
+    <!-- wp:separator {"style":{"color":{"background":"#c8c8c8"}},"className":"is-style-wide"} -->
+    <hr
+      class="wp-block-separator has-text-color has-alpha-channel-opacity has-background is-style-wide"
+      style="background-color: #c8c8c8; color: #c8c8c8"
+    />
+    <!-- /wp:separator -->
     <!-- /wp:post-template -->
 
-    <!-- wp:query-pagination -->
+    <!-- wp:query-pagination {"layout":{"type":"flex","justifyContent":"center"}} -->
     <!-- wp:query-pagination-previous /-->
 
     <!-- wp:query-pagination-numbers /-->
@@ -29,3 +55,5 @@
   <!-- /wp:query -->
 </main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"david-calhoun"} /-->
