--- a/templates/page.html
+++ b/templates/page.html
@@ -1,13 +1,13 @@
-<!-- wp:group -->
-<div class="wp-block-group"><!-- wp:template-part {"slug":"header"} /--></div>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
-  <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+  <!-- wp:group {"layout":{"type":"constrained"}} -->
   <div class="wp-block-group"><!-- wp:post-title {"level":1} /--></div>
   <!-- /wp:group -->
 
-  <!-- wp:post-content {"layout":{"inherit":true}} /-->
+  <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"david-calhoun"} /-->
