--- a/templates/single.html
+++ b/templates/single.html
@@ -1,59 +1,66 @@
-<!-- wp:group -->
-<div class="wp-block-group"><!-- wp:template-part {"slug":"header"} /--></div>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"inherit":true,"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
-  <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+  <!-- wp:group {"layout":{"type":"constrained"}} -->
   <div class="wp-block-group"><!-- wp:post-title {"level":1} /--></div>
   <!-- /wp:group -->
 
-  <!-- wp:post-content {"layout":{"inherit":true}} /-->
+  <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 
-  <!-- wp:comments -->
-  <div class="wp-block-comments">
-    <!-- wp:comments-title /-->
+  <!-- wp:group {"layout":{"type":"constrained"}} -->
+  <div class="wp-block-group">
+    <!-- wp:comments -->
+    <div class="wp-block-comments">
+      <!-- wp:comments-title /-->
 
-    <!-- wp:comment-template -->
-    <!-- wp:columns -->
-    <div class="wp-block-columns">
-      <!-- wp:column {"width":"40px"} -->
-      <div class="wp-block-column" style="flex-basis: 40px">
-        <!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /-->
-      </div>
-      <!-- /wp:column -->
-
-      <!-- wp:column -->
-      <div class="wp-block-column">
-        <!-- wp:comment-author-name {"fontSize":"small"} /-->
-
-        <!-- wp:group {"style":{"spacing":{"margin":{"top":"0px","bottom":"0px"}}},"layout":{"type":"flex"}} -->
-        <div class="wp-block-group" style="margin-top: 0px; margin-bottom: 0px">
-          <!-- wp:comment-date {"fontSize":"small"} /-->
-
-          <!-- wp:comment-edit-link {"fontSize":"small"} /-->
+      <!-- wp:comment-template -->
+      <!-- wp:columns -->
+      <div class="wp-block-columns">
+        <!-- wp:column {"width":"40px"} -->
+        <div class="wp-block-column" style="flex-basis: 40px">
+          <!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /-->
         </div>
-        <!-- /wp:group -->
+        <!-- /wp:column -->
 
-        <!-- wp:comment-content /-->
+        <!-- wp:column -->
+        <div class="wp-block-column">
+          <!-- wp:comment-author-name {"fontSize":"small"} /-->
 
-        <!-- wp:comment-reply-link {"fontSize":"small"} /-->
+          <!-- wp:group {"style":{"spacing":{"margin":{"top":"0px","bottom":"0px"}}},"layout":{"type":"flex"}} -->
+          <div
+            class="wp-block-group"
+            style="margin-top: 0px; margin-bottom: 0px"
+          >
+            <!-- wp:comment-date {"fontSize":"small"} /-->
+
+            <!-- wp:comment-edit-link {"fontSize":"small"} /-->
+          </div>
+          <!-- /wp:group -->
+
+          <!-- wp:comment-content /-->
+
+          <!-- wp:comment-reply-link {"fontSize":"small"} /-->
+        </div>
+        <!-- /wp:column -->
       </div>
-      <!-- /wp:column -->
+      <!-- /wp:columns -->
+      <!-- /wp:comment-template -->
+
+      <!-- wp:comments-pagination -->
+      <!-- wp:comments-pagination-previous /-->
+
+      <!-- wp:comments-pagination-numbers /-->
+
+      <!-- wp:comments-pagination-next /-->
+      <!-- /wp:comments-pagination -->
+
+      <!-- wp:post-comments-form /-->
     </div>
-    <!-- /wp:columns -->
-    <!-- /wp:comment-template -->
-
-    <!-- wp:comments-pagination -->
-    <!-- wp:comments-pagination-previous /-->
-
-    <!-- wp:comments-pagination-numbers /-->
-
-    <!-- wp:comments-pagination-next /-->
-    <!-- /wp:comments-pagination -->
-
-    <!-- wp:post-comments-form /-->
+    <!-- /wp:comments -->
   </div>
-  <!-- /wp:comments -->
+  <!-- /wp:group -->
 </main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"david-calhoun"} /-->
