--- a/style.css
+++ b/style.css
@@ -21,3 +21,13 @@ Use it to make something cool, have fun, and share what you've learned with othe
     display: none;
   }
 }
+
+.wp-block-search__input {
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+}
+
+.wp-block-search__input:focus {
+  border-color: var(--wp--preset--color--primary);
+  box-shadow: 0 0 0 1px var(--wp--preset--color--primary);
+}
