feat: Adjust index list columns

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
       </div>
       <!-- /wp:column -->
 
-      <!-- wp:column {"verticalAlignment":"center","width":"10rem","layout":{"type":"default"}} -->
+      <!-- wp:column {"verticalAlignment":"center","width":"12rem","layout":{"type":"default"}} -->
       <div
         class="wp-block-column is-vertically-aligned-center"
-        style="flex-basis: 10rem"
+        style="flex-basis: 12rem"
       >
         <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left"}} -->
         <div class="wp-block-group">
-          <!-- wp:post-date {"format":"j F Y","isLink":true,"fontSize":"base"} /-->
+          <!-- wp:post-date {"format":"j F Y","fontSize":"base"} /-->
 
           <!-- wp:post-terms {"term":"category","fontSize":"base"} /-->
         </div>
